nav completed header added

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -10,7 +10,25 @@
 }
 
 @mixin mobile {
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: 666px) {
+        @content;
+    }
+}
+
+@mixin imgSecondform {
+    @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+        @content;
+    }
+}
+
+@mixin mobils {
+    @media (max-width: 570px) {
+        @content;
+    }
+}
+
+@mixin mobil {
+    @media (max-width: 510px) {
         @content;
     }
 }
