--- a/sass/main.css
+++ b/sass/main.css
@@ -20,10 +20,465 @@
 body {
   font-family: "Lexend Deca";
   overflow-x: hidden;
+  background-color: #F2F2F2;
 }
 
 .container {
   max-width: 1106px;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+.btn {
+  max-width: 180px;
+  height: 53px;
+  background-color: #FCB72B;
+  cursor: pointer;
+  padding: 14px 39px;
+  font-size: 15px;
+  line-height: 25px;
+  font-family: "Space Mono";
+  color: #FFFFFF;
+  border: none;
+}
+
+.btn:hover {
+  border: 3px solid #FCB72B;
+  background-color: #F2F2F2;
+  color: #FCB72B;
+  transition: 0.5s;
+  text-align: center;
+  max-width: 100%;
+}
+
+nav {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.05);
+  background-color: #F2F2F2;
+  z-index: 3;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 36px 0;
+}
+.nav__check {
+  display: none;
+}
+.nav__lable {
+  display: none;
+}
+@media screen and (max-width: 666px) {
+  .nav__lable {
+    display: block;
+  }
+}
+@media screen and (max-width: 666px) {
+  .nav {
+    max-width: 60%;
+    justify-content: space-between;
+  }
+}
+.nav__input {
+  display: none;
+}
+.nav__link-logo {
+  max-width: 107.82px;
+  max-height: 28.56px;
+}
+.nav__menus {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+}
+@media screen and (max-width: 666px) {
+  .nav__menus {
+    flex-direction: column;
+    background-color: #333A44;
+    position: fixed;
+    max-width: 256px;
+    top: 105px;
+    height: 485px;
+    padding-top: 64px;
+    padding-bottom: 24px;
+    padding-left: 32px;
+    align-items: baseline;
+    left: -100%;
+  }
+}
+.nav__menus-menu {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 32px;
+       column-gap: 32px;
+}
+@media screen and (max-width: 666px) {
+  .nav__menus-menu {
+    flex-direction: column;
+    row-gap: 24px;
+    align-items: baseline;
+  }
+}
+.nav__menus-menu--link {
+  font-family: "Space Mono";
+  font-size: 15px;
+  line-height: 25px;
+  text-decoration: none;
+  color: #939CAA;
+}
+@media screen and (max-width: 666px) {
+  .nav__menus-menu--link {
+    color: #E5ECF4;
+  }
+}
+
+.nav__input:checked ~ .nav__menus {
+  left: 0%;
+  transition: 0.5s;
+}
+
+.nav__input:checked ~ .nav__check {
+  display: block;
+  justify-content: start;
+}
+
+.nav__input:checked ~ .nav__lable {
+  display: none;
+}
+
+.bitmap {
+  background-image: url(../../../scoot/images/Bitmap.png);
+  height: 650px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-top: 125px;
+  padding-top: 153px;
+  position: relative;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .bitmap {
+    background-image: url(../../../scoot/images/Bitmap@2x.png);
+    height: 663px;
+  }
+}
+@media screen and (max-width: 992px) {
+  .bitmap {
+    background-image: url(../../../scoot/images/Bitmap-tablet.png);
+    height: 650px;
+  }
+}
+@media only screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 992px) and (min-device-pixel-ratio: 2), only screen and (max-width: 992px) and (min-resolution: 192dpi), only screen and (max-width: 992px) and (min-resolution: 2dppx) {
+  .bitmap {
+    background-image: url(../../../scoot/images/Bitmap@2x-tablet.png);
+    height: 780px;
+  }
+}
+@media screen and (max-width: 666px) {
+  .bitmap {
+    background-image: url(../../../scoot/images/Bitmap-mobile.png);
+    height: 650px;
+  }
+}
+@media only screen and (max-width: 666px) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 666px) and (min-device-pixel-ratio: 2), only screen and (max-width: 666px) and (min-resolution: 192dpi), only screen and (max-width: 666px) and (min-resolution: 2dppx) {
+  .bitmap {
+    background-image: url(../../../scoot/images/Bitmap@2x-mobile.png);
+    height: 1028px;
+  }
+}
+.bitmap h1 {
+  font-family: "Space Mono";
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #FFFFFF;
+  margin-bottom: 40px;
+  max-width: 500px;
+}
+@media screen and (max-width: 992px) {
+  .bitmap h1 {
+    font-size: 56px;
+    line-height: 56px;
+    text-align: center;
+    letter-spacing: -2.5px;
+    max-width: 573px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 666px) {
+  .bitmap h1 {
+    max-width: 311px;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: -1.78571px;
+  }
+}
+.bitmap .blockm {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 90%;
+  position: absolute;
+  left: -1px;
+}
+@media screen and (max-width: 992px) {
+  .bitmap .blockm {
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+  }
+}
+.bitmap .blockm__line {
+  max-width: 202px;
+}
+@media screen and (max-width: 992px) {
+  .bitmap .blockm__line {
+    display: none;
+  }
+}
+.bitmap .blockm__texts {
+  margin: 0 57px;
+}
+@media screen and (max-width: 992px) {
+  .bitmap .blockm__texts {
+    text-align: center;
+    margin: 0 140px;
+  }
+}
+.bitmap .blockm__texts-decoration {
+  font-size: 15px;
+  line-height: 25px;
+  color: #FFFFFF;
+  max-width: 405px;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 992px) {
+  .bitmap .blockm__texts-decoration {
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+    max-width: 573px;
+    margin: 24px 0 32px 0;
+  }
+}
+@media screen and (max-width: 666px) {
+  .bitmap .blockm__texts-decoration {
+    min-width: 311px;
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+  }
+}
+.bitmap .blockm__st {
+  max-width: 447px;
+}
+@media screen and (max-width: 992px) {
+  .bitmap .blockm__st {
+    margin-top: 220px;
+    position: absolute;
+    left: -127px;
+  }
+}
+@media screen and (max-width: 666px) {
+  .bitmap .blockm__st {
+    margin-top: 7px;
+    left: -275px;
+  }
+}
+@media (max-width: 570px) {
+  .bitmap .blockm__st {
+    margin-top: 330px;
+  }
+}
+
+.about {
+  background-image: url(../../../scoot/images/Bitmap-about.png);
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 125px;
+  padding-top: 72px;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .about {
+    background-image: url(../../../scoot/images/Bitmap@2x-about.png);
+  }
+}
+@media screen and (max-width: 666px) {
+  .about {
+    background-image: url(../../../scoot/images/Bitmap-about-mobile.jpg);
+    height: 160px;
+  }
+}
+@media only screen and (max-width: 666px) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 666px) and (min-device-pixel-ratio: 2), only screen and (max-width: 666px) and (min-resolution: 192dpi), only screen and (max-width: 666px) and (min-resolution: 2dppx) {
+  .about {
+    padding-top: 60px;
+    margin-top: 105px;
+    background-image: url(../../../scoot/images/Bitmap@2x-about-mobile.png);
+  }
+}
+.about .title {
+  font-family: "Space Mono";
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 992px) {
+  .about .title {
+    display: none;
+  }
+}
+@media screen and (max-width: 666px) {
+  .about .title {
+    display: block;
+    text-align: center;
+  }
+}
+.about .rounds {
+  display: none;
+}
+@media screen and (max-width: 992px) {
+  .about .rounds {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 666px) {
+  .about .rounds {
+    display: none;
+  }
+}
+.about .rounds__title {
+  font-family: "Space Mono";
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #FFFFFF;
+}
+.about .rounds__round-flex {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+}
+@media screen and (max-width: 992px) {
+  .about .rounds__round-flex {
+    position: absolute;
+    right: -42px;
+  }
+}
+.about .rounds__round-flex--round {
+  border-radius: 50%;
+  border: 3px solid #FFFFFF;
+  min-width: 62px;
+  height: 62px;
+}
+.about .rounds__round-flex--white {
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  min-width: 62px;
+  height: 62px;
+}
+
+.careers {
+  background-image: url(../../../scoot/images/Bitmap-careers.png);
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 125px;
+  padding-top: 72px;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .careers {
+    background-image: url(../../../scoot/images/Bitmap@2x-careers.png);
+  }
+}
+@media screen and (max-width: 666px) {
+  .careers {
+    background-image: url(../../../scoot/images/Bitmap-careers-mobile.jpg);
+    height: 160px;
+  }
+}
+@media only screen and (max-width: 666px) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 666px) and (min-device-pixel-ratio: 2), only screen and (max-width: 666px) and (min-resolution: 192dpi), only screen and (max-width: 666px) and (min-resolution: 2dppx) {
+  .careers {
+    padding-top: 60px;
+    margin-top: 105px;
+    background-image: url(../../../scoot/images/Bitmap@2x-careers-mobile.png);
+  }
+}
+.careers .title {
+  font-family: "Space Mono";
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 992px) {
+  .careers .title {
+    display: none;
+  }
+}
+@media screen and (max-width: 666px) {
+  .careers .title {
+    display: block;
+    text-align: center;
+  }
+}
+.careers .rounds {
+  display: none;
+}
+@media screen and (max-width: 992px) {
+  .careers .rounds {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 666px) {
+  .careers .rounds {
+    display: none;
+  }
+}
+.careers .rounds__title {
+  font-family: "Space Mono";
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #FFFFFF;
+}
+.careers .rounds__round-flex {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+}
+@media screen and (max-width: 992px) {
+  .careers .rounds__round-flex {
+    position: absolute;
+    right: -42px;
+  }
+}
+.careers .rounds__round-flex--round {
+  border-radius: 50%;
+  border: 3px solid #FFFFFF;
+  min-width: 62px;
+  height: 62px;
+}
+.careers .rounds__round-flex--white {
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  min-width: 62px;
+  height: 62px;
 }/*# sourceMappingURL=main.css.map */
